# stock-multi-agent-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  data_downloader.py  docker-compose.yml  main.py  pyproject.toml  report_有研新材_20260627_2047.md  requirements-lock.txt  setup_project.py  test_connection.py
.github/workflows/: test.yml
agents/: news_analyst.py  planner.py  reflection.py  risk_manager.py  sector_analyst.py  supervisor.py  technical_analyst.py
api/: server.py
core/: __init__.py  cache.py  cognitive.py  cost_tracker.py  event_bus.py  grounding.py  resilience.py  review.py
frontend/: index.html
frontend-react/: index.html
frontend-react/src/: App.jsx  index.css
frontend/css/: main.css
frontend/js/: agent-timer.js  app.js  auth.js  chart-render.js  report-render.js  sse-client.js
graph/: scan_workflow.py  workflow.py
memory/: extraction.py  vector_store.py
meta/: concept_board_meta.csv  last_update_errors.csv  last_update_summary.csv  local_stock_industry_check_detail.csv  local_stock_industry_stat.csv  stock_meta.csv  update_errors.csv
scripts/: backtest.py  check_reviews.py  scheduled_refresh.py
tests/: conftest.py
tests/test_agents/: conftest.py  test_news_analyst.py  test_planner.py  test_reflection.py  test_risk_manager.py  test_sector_analyst.py  test_supervisor.py  test_technical_analyst.py
tests/test_api/: test_auth.py  test_server.py
tests/test_core/: test_cache.py  test_cost_tracker.py  test_event_bus.py  test_grounding.py  (+2 more)
tools/: data_pipeline.py  price_api.py  search.py  stock_data.py
(+20 files in other folders)
